assets/css/app.scss
/* ... */
.radio {
  margin-top: 0;
}
.complex-choice-group {
  display: flex;
  align-items: start;
  .checkbox {
    margin: 0;
  }
}
.question-no-margin {
  .form-group {
    margin-bottom: 0;
  }
}
td div.bootstrap-select {
  max-width: 450px;
}
.delay-group {
  .one-line {
    vertical-align: middle;

    > div {
      display: inline-block;
      vertical-align: middle;
    }
  }
}
.dropdown.bootstrap-select {
    width: 100% !important;
}
.bootstrap-select > div.dropdown-menu {
  width: 100%;
  min-width: 100% !important;
  z-index: 812;
  a {
    padding-left: 8px;
    padding-right: 8px;
  }
  span.text {
    width: calc(100% - 20px);
    overflow: hidden;
    text-overflow: ellipsis;
    margin-right: 0 !important;
  }
  span.glyphicon {
    right: 0 !important;
  }
}
.has-feedback .form-control-feedback {
  pointer-events: auto;
  cursor: pointer;
}
textarea {
  max-width: 100%;
  min-width: 100%;
  min-height: 34px;
}
textarea.textareaheight {
  height: 34px;
}
.js-collection-wrapper i.fa-times {
  color: #ff746d;
}

/* Pages */
.content-wrapper.public{
  margin-left: 0;
}

/* DatePicker */
.daterangepicker {
  z-index: 5 !important;
  font-family: inherit !important;
}

/* Show */
body.show .content ul {
  -webkit-padding-start: 15px;
}

/* Tooltip */
.stacked-bar-graph .tooltipchart {
    position: relative;
}
.tooltipchart .tooltipcharttext {
    visibility: hidden;
    background-color: black;
    color: #fff;
    text-align: center;
    padding: 5px;
    border-radius: 6px;
    height: 30px;
    display: block;
    position: absolute;
    z-index: 2;
    top: 120%;
    left: 50%;
    transform: translateX(-50%);
    white-space: nowrap;
    &::after {
        content: " ";
        position: absolute;
        bottom: 100%;  /* At the top of the tooltip */
        left: 50%;
        margin-left: -5px;
        border-width: 5px;
        border-style: solid;
        border-color: transparent transparent black transparent;
    }
}
.tooltipchart:hover .tooltipcharttext {
    visibility: visible;
}

#tooltip {
  display:none;
  position:fixed;
  overflow:hidden;
  span.collectivity-name{
    font-size:medium;
    font-weight: bold;
  }
}
.tooltip-box{
  border: solid #01C0EF 1px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  background: #fff;
  border-radius: 2px;
  margin-bottom: 15px;
  padding:5px;
}
.report{
  display:flex;
  flex-direction: column;
  justify-content: space-around;
  margin-top: 2rem;
  i{
    font-size: 33px;
  }
}
.map-wrapper {
  .row {
    overflow: hidden;
    margin-right:0;
  }
  padding:0;
  [class*="col-"]{
    margin-bottom: -99999px;
    padding-bottom: 99999px;
  }
}
.table > tbody > tr > td.concerned-people-type {
  padding-left: 30px;
}
.custom-checkbox {
  margin-top: 8px;
  margin-bottom: 16px;

  div > label {
    padding-right: 0;
    cursor: pointer;
  }
}

.content-header-custom-padding {
  padding: 15px 0;
}

.stacked-bar-graph {
  width: 100%;
  height: 20px;

  span {
    display: inline-block;
    height:100%;
    box-sizing: border-box;
    float: left;
  }

  .bar-conforme {
    background: #00A65A;
  }

  .bar-non-conforme-mineure {
    background: #F39C12;
  }

  .bar-non-conforme-majeure {
    background: #DD4B39;
  }
}

.reponse-modal-button {
  background-color: transparent;
}

div.mesurement-hide {
  display: inline-block;

  > i.primary-i {
    color: #3779B6;
  }

  > i.warning-i {
    color: #F1902A;
  }

  > div {
    display: none;
  }

  > i:hover + div.primary {
      border: solid #3779B6 1px;
    }

  > i:hover + div.warning {
    border: solid #F1902A 1px;
  }

  > i:hover + div {
    display: block;
    position: absolute;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    background: #fff;
    border-radius: 2px;
    padding: 5px;

    > ul {
      font-weight: bold;
    }
  }
}

td.reponse-vertical-align {
  vertical-align: middle !important;
}

.js-table-collection-wrapper .checkbox label {
  display: flex;
  justify-content: center;
  align-items: center;
}

.craue_formflow_buttons {
  display: inline;
}

.dic-darkgreen {
  background: #d3f4e4;
}
.dic-lightgreen {
  background: #ddede0;
}
.dic-lightpink {
  background: #f4e7e6;
}
.dic-darkpink {
  background: #fbd7dd;
}
.dic-nocolor {
  background: #ffffff;
  vertical-align: middle  !important;
}
.dic-border-right {
    border-right: 1px solid black;
}
.dic-border-top {
  border-top: 1px solid black;
}
.dic-table {
  text-align: center;
  width: 80%;

  td {
    width: 20%;
    border-top: none !important;
  }
}

.border-0 {
  border: none;
}
shadow {
  box-shadow : 0 .5rem 1rem rgba(0,0,0,.15)!important;
}

#documentation-grid tr {
  display: flex;
    justify-content: space-between;
    flex-direction: column;
}

#documentation-grid>tbody>tr>td{
    border : none;
    line-height: 1;
}

.cards thead {
  display: none;
}

tr.selected td:before {
  color: #CCC;
}

td.action > a {
  white-space: nowrap;
}

div.dt-buttons {
  position: initial;
}

div.dt-button-background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.7);
  background: -ms-radial-gradient(center, ellipse farthest-corner, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.7) 100%);
  background: -moz-radial-gradient(center, ellipse farthest-corner, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.7) 100%);
  background: -o-radial-gradient(center, ellipse farthest-corner, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.7) 100%);
  background: -webkit-gradient(radial, center center, 0, center center, 497, color-stop(0, rgba(0,0,0,0.3)), color-stop(1, rgba(0,0,0,0.7)));
  background: -webkit-radial-gradient(center, ellipse farthest-corner, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.7) 100%);
  background: radial-gradient(ellipse farthest-corner at center, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.7) 100%);
  z-index: 4001;
}
/* ... */

